# mv

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  service-mvtango.yaml
.devcontainer/: Dockerfile  devcontainer.json  devcontainer_old.json
helm/mv/: Chart.yaml
helm/mv/templates/: app.yaml  deployment.yaml
helm/mv1/: Chart.yaml
helm/mv1/templates/: app.yaml
helm/mv1b/: Chart.yaml
helm/mv1b/templates/: app.yaml
helm/mv1c/: Chart.yaml
helm/mv1c/templates/: app.yaml
helm/mv2/: Chart.yaml
helm/mv2/templates/: app.yaml
helm/mv3/templates/: app.yaml  redis.yaml
helm/mvtango/: Chart.yaml
mv/: __init__.py  client.py  data_types.py  fast_api_server.py  fastapi_ws_helpers.py  ping.py  server.py  stack_server.py  state_machine.py  tango_server.py  test_pub_sub.py  ws_server.py
mv/_client/: base.py  client.py  config.py  proxy.py  tango_proxy.py  ws_listener.py
mv/_server/: connection_manager.py  fast_api_server.py  ws_server.py
mv/_state_machine/: base.py  config.py  factory.py  state.py  state_control.py  state_machine.py  state_server.py  stateupdater.py
src/: getmovies.py  helpers.py
tests/: conftest.py  helpers.py  serve.py  serve_tango.py  test_fast_api.py  test_it.py  test_movies.py  test_stack_server.py
tests/dev_tests/: conftest.py  helpers.py  test_app_server.py  test_data_types.py  test_rest_server.py  test_state_machine.py  test_state_server.py  test_tango.py  test_ws.py  test_ws_listening.py
tests/feature_tests/: conftest.py  contextmanagement.py  test_on_off.py
(+32 files in other folders)
