[tool.poetry]
name = "mv"
version = "0.1.0"
description = ""
authors = ["gerhardlr <gerhardlr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
websockets = "^12.0"
pytest-asyncio = "^0.23.8"
fastapi = {extras = ["standard"], version = "^0.112.1"}
requests = "^2.32.3"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
assertpy = "^1.1"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
